<resources>
    <string name="app_name">MovieApp</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nFilm yang sedang tampil</string>
    <string name="presale_desc">Tidak khawatir ketinggalan\nUpdate Film terbaru</string>
    <string name="cashless_desc">Gunakan E-Wallet untuk\ntransaksi tiket nonton</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="cash_less">Cash less</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="upload_photo">UPLOAD PHOTO</string>
    <string name="muhamad_angga">Muhamad Angga</string>
    <string name="idr_200_000">\tIDR 200.000</string>
    <string name="desc">The Avengers stop Thanos a mad Titan and this army lorem si tanos bengeut na jiga musuh spidermen anjay parah banget sih gais aduh hayang cilok</string>
    <string name="beli_tiket">BELI TIKET</string>
    <string name="selected">Selected</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat">Tiket anda telah berhasil di beli \n Selamat Menonton Film!</string>
</resources>
